説明の追加

--- a/japanese/content-ja.html
+++ b/japanese/content-ja.html
@@ -43,48 +43,60 @@
       </div>
       <div class="page-main__content">
         <p>本校では教育にも力を入れています。以下に授業の一部を掲載します。</p>
-
           <div class="intro-section__content">
             <div class="intro-section__block" id="content1">
               <div class="intro-section__img-area"></div>
               <div class="intro-section__txt-area">
-                <h2>共通科目</h2>
-                <p>全学年で共通科目の学習をします。2年次、3年次の基盤となるものなので、1年次には教師陣が特に力を入れています。しっかりついてきてください。</p>
+                <h2>教養科目</h2>
+                <p>全学年で教養科目の学習をします。2年次、3年次の授業の基盤となるものなので、1年次には教師陣が特に力を入れています。
+                  英語の授業ではコミュニケーションを中心としており、校外学習をすることもあります。全員がTOEIC900点以上となることを目指します。
+                  また、数学の授業では宿題の解説を生徒自身にしてもらい、他人に教えることによって理解度アップを促します。</p>
               </div>
             </div>
             <div class="intro-section__block" id="content2">
               <div class="intro-section__img-area"></div>
               <div class="intro-section__txt-area">
                 <h2>法</h2>
-                <p>法についても学びます。</p>
+                <p>法についても学びます。世界中のあらゆることが法に整備されているので、法があっての世の中です。とにかく覚えることが膨大で大変なので、
+                  次に示すような学習方法を実施しています。本校では毎授業の始めに小テストを行い、翌週、同じ範囲の小テストを再度行います。
+                  インプットだけでなく、アウトプットを何度もすることで法についての理解を定着させます。</p>
               </div>
             </div>
             <div class="intro-section__block" id="content3">
               <div class="intro-section__img-area"></div>
               <div class="intro-section__txt-area">
                 <h2>マーケティング</h2>
-                <p>マネジメントの基本であるマーケティングについて学びます。マーケティングと聞くと難しいと感じるかもしれませんが、本校教師が自信を持って分かりやすく説明します。</p>
+                <p>マネジメントの基本であるマーケティングについて学びます。マーケティングとは"消費者の求めている商品・サービスを調査し、
+                  供給する商品や販売活動の方法などを決定することで、生産者から消費者への流通を円滑にする活動"のことです(weblioより)。
+                  マーケティングで最も重要なことは市場を正確に把握することです。こう聞くと難しいと感じるかもしれませんが、
+                  本校教師が自信を持って分かりやすく説明します。</p>
               </div>
             </div>
             <div class="intro-section__block" id="content4">
               <div class="intro-section__img-area"></div>
               <div class="intro-section__txt-area">
-                <h2>フィアナンス</h2>
-                <p>やはり、金融に関しても抑えておかないといけません。みんなお金好きだよね？経済の回し方を知り、お金を上手に扱えるようになりましょう。</p>
+                <h2>ファイナンス</h2>
+                <p>やはり、金融に関しても抑えておかないといけません。世界を作っているのはお金といっても過言ではありません。
+                  まずは貨幣制度の歴史から勉強し、貨幣の誕生から現在における貨幣の重要性と貨幣制度を学びます。株や為替など普段、扱わないようなことも学習して、
+                  世界のお金の流れを視覚化することを目指します。経済の回し方を知り、お金を上手に扱えるようになりましょう。</p>
               </div>
             </div>
             <div class="intro-section__block" id="content5">
               <div class="intro-section__img-area"></div>
               <div class="intro-section__txt-area">
                 <h2>プログラミング</h2>
-                <p>「プログラミング能力がその人の能力」と言われるほど、非常に重要な授業です。初歩的なところから始めて少しづつ難しくなりますが、共に頑張りましょう。</p>
+                <p>情報社会である現代において、「プログラミング能力がその人の能力」と言われるほど、非常に重要な授業です。
+                  世界的に見てもプログラミングの授業は取り入れ始められています。基本的なパソコン操作から始めて少しづつ難しくなりますが、
+                  本校のプロフェッショナルな教師陣が丁寧な指導をするので安心してください。最終的には、自身のホームページを作成してもらいます。</p>
               </div>
             </div>
             <div class="intro-section__block" id="content6">
               <div class="intro-section__img-area"></div>
               <div class="intro-section__txt-area">
                 <h2>e-ビジネス</h2>
-                <p>今の時代、e-ビジネスは必須です。言葉くらいは聞いたことがあるのでは？本校では、2年前からe-ビジネスの授業を取り入れました。</p>
+                <p>e-ビジネスという言葉を聞いたことがあるでしょうか。e-ビジネスとは"企業などの事業活動全般に渡ってインターネットや関連する情報・通信技術を導入し、
+                  業務工程を全面的に電子化すること、また、そのような変革を経て生まれた深く電子化された企業活動や商取引"のことです(e-Wordsより)。
+                  e-ビジネスの重要性やe-ビジネスの成り立ちから学び、最終的には簡単なe-ビジネスの仕組みを構築します。</p>
               </div>
             </div>
           </div>
