--- a/japanese/intro-ja.html
+++ b/japanese/intro-ja.html
@@ -110,22 +110,26 @@
     </div>
     
     <div class="club">
-      <div class="contents-head">
-        <h2>クラブ</h2>
+      <div class="sports-picture">
+        <div class="non-sports-picture">
+          <div class="contents-head">
+            <h2>クラブ</h2>
+          </div>
+          <p>本校ではクラブ活動にも力を入れており、以下のクラブ活動を実施しています。<br>
+            高校3年間の素敵な青春の日々を約束します。
+          </p>
+          <h3 class="club-head">運動系</h3>
+          <p>サッカー(男)(女)</p>
+          <p>クリケット(男)(女)</p>
+          <p>バスケットボール(男)(女)</p>
+          <h3 class="club-head">文化系</h3>
+          <p>吹奏楽部</p>
+          <p>合唱団</p>
+          <p>世界文化研究会</p>
+          <p>ボードゲーム研究会</p>
+          <p>ボランティア</p>
+        </div>
       </div>
-      <p>本校ではクラブ活動にも力を入れており、以下のクラブ活動を実施しています。<br>
-        高校3年間の素敵な青春の日々を約束します。
-      </p>
-      <h3 class="club-head">運動系</h3>
-      <p>サッカー(男)(女)</p>
-      <p>クリケット(男)(女)</p>
-      <p>バスケットボール(男)(女)</p>
-      <h3 class="club-head">文化系</h3>
-      <p>吹奏楽部</p>
-      <p>合唱団</p>
-      <p>世界文化研究会</p>
-      <p>ボードゲーム研究会</p>
-      <p>ボランティア</p>
     </div>
     
     <div class="event">
