indexデザイン追加

--- a/japanese/index-ja.html
+++ b/japanese/index-ja.html
@@ -41,47 +41,81 @@
             <h1 class="page-main__header1">Welcome to</h1>
             <h1 class="page-main__header2">London Management School</h1>
         </div>
-        <div class="page-main__content">
-            <section class="content-news content">
-                <h2 class="content-news__header">NEWS</h2>
-            </section>
-            <section class="content-contents content">
-                <h2 class="content-contents__header">CONTENTS</h2>
-            </section>
-        </div>
-        <div class="news">
-          <p>2020年03月11日</p>
-          <p>入試　コロナウイルスにおける本校入試について</p>
-          <p>2020年03月11日</p>
-          <p>ニュース　臨時休校のお知らせ</p>
-          <p>2020年03月10日</p>
-          <p>ニュース　遠足の中止について</p>
-          <p>2020年03月06日</p>
-          <p>イベント　ベンジャミン氏による「ロンドンの歴史とこれから」講演会の延期について</p>
-          <p>2020年03月04日</p>
-          <p>受賞　本校生徒の2年マーラヤ君がロンドンスピーチコンクールで銀賞受賞</p>
-          <p>2020年03月01日</p>
-          <p>入試　本校入試の出願締め切りが迫っています</p>
-          <p>2020年02月29日</p>
-          <p>その他　今年は閏年です</p>
-          <p>2020年02月26日</p>
-          <p>イベント　校内大掃除の実施</p>
-          <p>2020年02月24日</p>
-          <p>受賞　本校が2019年ロンドンベストインターナショナルスクール賞を受賞</p>
-          <p>2020年02月24日</p>
-          <p>その他　健康管理について</p>
-        </div>
-        <div class="content">
-          <h3>本校についてはこちらから</h3>
-          <p>本校の概要、クラブ活動、年間行事等についてご紹介します</p>
-          <h3>教育についてはこちらから</h3>
-          <p>本校の教育プログラムについてご紹介します</p>
-          <h3>設備についてはこちらから</h3>
-          <p>本校自慢の設備についてご紹介します</p>
-          <h3>入試についてはこちらから</h3>
-          <p>入試方法、入試条件等についてご紹介します</p>
-          <h3>アクセスについてはこちらから</h3>
-          <p>ロンドン市街地、空港からのアクセスについてご紹介します</p>
+        <div class="inner">
+            <div class="page-main__content">
+                <section class="content-news content">
+                    <h2 class="content-news__header">NEWS</h2>
+                    <div class="news">
+                        <div></div>
+                        <div>
+                            <p>2020年03月11日</p>
+                            <p>入試　コロナウイルスにおける本校入試について</p>
+                        </div>
+                        <div>
+                            <p>2020年03月11日</p>
+                            <p>ニュース　臨時休校のお知らせ</p>
+                        </div>
+                        <div>
+                            <p>2020年03月10日</p>
+                            <p>ニュース　遠足の中止について</p>
+                        </div>
+                        <div>
+                            <p>2020年03月06日</p>
+                            <p>イベント　ベンジャミン氏による「ロンドンの歴史とこれから」講演会の延期について</p>
+                        </div>
+                        <div>
+                            <p>2020年03月04日</p>
+                            <p>受賞　本校生徒の2年マーラヤ君がロンドンスピーチコンクールで銀賞受賞</p>
+                        </div>
+                        <div>
+                            <p>2020年03月01日</p>
+                            <p>入試　本校入試の出願締め切りが迫っています</p>
+                        </div>
+                        <div>
+                            <p>2020年02月29日</p>
+                            <p>その他　今年は閏年です</p>
+                        </div>
+                        <div>
+                            <p>2020年02月26日</p>
+                            <p>イベント　校内大掃除の実施</p>
+                        </div>
+                        <div>
+                            <p>2020年02月24日</p>
+                            <p>受賞　本校が2019年ロンドンベストインターナショナルスクール賞を受賞</p>
+                        </div>
+                        <div>
+                            <p>2020年02月24日</p>
+                            <p>その他　健康管理について</p>
+                        </div>
+                    </div>
+                </section>
+                <section class="content-contents content">
+                    <h2 class="content-contents__header">CONTENTS</h2>
+                    <div class="ccc">
+                        <div></div>
+                        <div>
+                            <h3>本校についてはこちらから</h3>
+                            <p>本校の概要、クラブ活動、年間行事等についてご紹介します</p>
+                        </div>
+                        <div>
+                            <h3>教育についてはこちらから</h3>
+                            <p>本校の教育プログラムについてご紹介します</p>
+                        </div>
+                        <div>
+                            <h3>設備についてはこちらから</h3>
+                            <p>本校自慢の設備についてご紹介します</p>
+                        </div>
+                        <div>
+                            <h3>入試についてはこちらから</h3>
+                            <p>入試方法、入試条件等についてご紹介します</p>
+                        </div>
+                        <div>
+                            <h3>アクセスについてはこちらから</h3>
+                            <p>ロンドン市街地、空港からのアクセスについてご紹介します</p>
+                        </div>
+                    </div>
+                </section>
+            </div>
         </div>
     </main>
     <!--フッター-->
