授業内容の英訳

--- a/english/content-en.html
+++ b/english/content-en.html
@@ -35,7 +35,82 @@
         </nav>
     </header>
     <!--メイン-->
-    <main class="page-main"></main>
+    <main class="page-main">
+      <div class="page-main">
+        <div class="page-main__header">
+          <h1 class="page-submain__header">Education content</h1>
+        </div>
+        <div class="page-main__content">
+          <p>Our school is also focusing on education. Some of the lessons are listed below.</p>
+            <div class="intro-section__content">
+              <div class="intro-section__block" id="content1">
+                <div class="intro-section__img-area"></div>
+                <div class="intro-section__txt-area">
+                  <h2>Liberal arts</h2>
+                  <p>You study liberal arts subjects in all grades. Teachers particularly focuse on the first year, as it is the basis
+                    for the second and third year classes.English classes focus on communication, and sometimes involve off-campus learning.
+                    We aim to achieve a TOEIC score of 900 or higher.In mathematics lessons, students are asked to explain their homework
+                    and teach others to improve their understanding.</p>
+                </div>
+              </div>
+              <div class="intro-section__block" id="content2">
+                <div class="intro-section__img-area"></div>
+                <div class="intro-section__txt-area">
+                  <h2>Law</h2>
+                  <p>You learn also about the law. Everything in the world is ruled by the law, so it's in a world with law. Anyway,
+                    it ’s huge and hard to remember,and we offer the following learning methods. You take a quiz at the
+                    beginning of each class and again the next week with the same range of quizzes.
+                    By using not only inputs but also outputs many times, you will have a firm understanding of the law.</p>
+                </div>
+              </div>
+              <div class="intro-section__block" id="content3">
+                <div class="intro-section__img-area"></div>
+                <div class="intro-section__txt-area">
+                  <h2>Marketing</h2>
+                  <p>You learn about marketing, the basis of management. Marketing is "an activity that research the products and
+                    services consumers want, and smooth the distribution from producers to consumers by determining the products to be supplied and
+                    the method of sales activities (from this site:<a href="https://www.weblio.jp/content/マーケティング" target="_blank">about marketing</a>).
+                    The most important thing in marketing is to understand the market accurately. You may feel it difficult to study,
+                    but our teachers will explain with confidence.</p>
+                </div>
+              </div>
+              <div class="intro-section__block" id="content4">
+                <div class="intro-section__img-area"></div>
+                <div class="intro-section__txt-area">
+                  <h2>Finance</h2>
+                  <p>After all, you have to learn finances. It is no exaggeration to say that money is what makes the world.
+                    First, you will learn from the history of the monetary system and the importance of money and the current monetary system.
+                    You also learn things that you do not usually handle such as stocks and exchanges,
+                    and aim to visualize the flow of money in the world. Let's learn how to turn the economy and be able to handle money well.</p>
+                </div>
+              </div>
+              <div class="intro-section__block" id="content5">
+                <div class="intro-section__img-area"></div>
+                <div class="intro-section__txt-area">
+                  <h2>Programming</h2>
+                  <p>In today's information society, this is a very important lesson, as it is said that "programming ability is a person's ability".
+                    Even from a global perspective, programming classes have begun to be adopted. You start with basic computer operation, and it becomes
+                    a bit more difficult, but please be assured that our professional teachers will be attentive to your needs.
+                    Eventually, you will create your own homepage.</p>
+                </div>
+              </div>
+              <div class="intro-section__block" id="content6">
+                <div class="intro-section__img-area"></div>
+                <div class="intro-section__txt-area">
+                  <h2>e-business</h2>
+                  <p>Have you ever heard the word e-business? E-business is "to completely digitize business processes by introducing
+                    the Internet and related information and communication technologies across all business activities of companies.
+                    And it's business activities and commerce,pass such a change and deeply digitized."
+                    (from this site:<a href="http://e-words.jp/w/eビジネス.html" target="_blank">about e-business</a>).
+                    You learn from the importance of e-business and the origin of e-business, and ultimately build a simple e-business mechanism.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+            <div class="gairyaku">
+              <img src="../img/content/figure.jpg" alt="図" class="zu">
+            </div>
+    </main>
     <!--フッター-->
     <footer class="page-footer"></footer>
 </body>
