--- a/english/content-en.html
+++ b/english/content-en.html
@@ -108,7 +108,7 @@
             </div>
           </div>
             <div class="gairyaku">
-              <img src="../img/content/figure.jpg" alt="図" class="zu">
+              <img src="../img/content/figure_en.jpg" alt="図" class="zu">
             </div>
     </main>
     <!--フッター-->
