--- a/english/access-en.html
+++ b/english/access-en.html
@@ -49,13 +49,13 @@
                   take Piccadilly Line to Ealing Common Station</td>
             </tr>
             <tr>
-              <td>From Kings Cross Station, a 4 minutes walk from St. Pancras Station,
-                  take Piccadilly line to Holborn station.
+              <td>From King's Cross Station, a 4 minutes walk from St. Pancras Station,
+                  take Piccadilly line to Holborn Station.
                   Change to Central Line to West Acton Station</td>
             </tr>
             <tr>
-              <td>From Kings Cross Station, a 4 minutes walk from St. Pancras Station,
-                  take the Victoria line to Oxford Circus station.
+              <td>From King's Cross Station, a 4 minutes walk from St. Pancras Station,
+                  take the Victoria line to Oxford Circus Station.
                   Change to Central Line to West Acton Station</td>
             </tr>
             <tr>
@@ -67,12 +67,12 @@
         </table>
       </div>
       <div class="figure">
-        <img src="../img/access/access.jpg" alt="図">
+        <img src="../img/access/access_en.jpg" alt="図">
       </div>
       <div class="map">
         <h2>School location</h2>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4010.3314678545985!2d-0.2827834859472339!3d51.51414552059801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f20!3m3!1m2!1s0x48760e001303304f%3A0xb1ae25fda0c30ea9!2z44Ot44Oz44OJ44Oz5pel5pys5Lq65a2m5qCh!5e0!3m2!1sja!2sfr!4v1583744827474!5m2!1sja!2sfr"
-                  width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.9698255305616!2d-0.2827718842297865!3d51.51376957963617!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f25!3m3!1m2!1s0x48760e001303304f%3A0xb1ae25fda0c30ea9!2sThe%20Japanese%20School%20Ltd!5e0!3m2!1sen!2suk!4v1583942987555!5m2!1sen!2suk"
+          width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </div>
     </main>
     <!--フッター-->
