URLの埋め込み

--- a/japanese/content-ja.html
+++ b/japanese/content-ja.html
@@ -67,7 +67,8 @@
               <div class="intro-section__txt-area">
                 <h2>マーケティング</h2>
                 <p>マネジメントの基本であるマーケティングについて学びます。マーケティングとは"消費者の求めている商品・サービスを調査し、
-                  供給する商品や販売活動の方法などを決定することで、生産者から消費者への流通を円滑にする活動"のことです(weblioより)。
+                  供給する商品や販売活動の方法などを決定することで、生産者から消費者への流通を円滑にする活動"のことです
+                  (<a href="https://www.weblio.jp/content/マーケティング" target="_blank">weblioより</a>)。
                   マーケティングで最も重要なことは市場を正確に把握することです。こう聞くと難しいと感じるかもしれませんが、
                   本校教師が自信を持って分かりやすく説明します。</p>
               </div>
@@ -77,7 +78,7 @@
               <div class="intro-section__txt-area">
                 <h2>ファイナンス</h2>
                 <p>やはり、金融に関しても抑えておかないといけません。世界を作っているのはお金といっても過言ではありません。
-                  まずは貨幣制度の歴史から勉強し、貨幣の誕生から現在における貨幣の重要性と貨幣制度を学びます。株や為替など普段、扱わないようなことも学習して、
+                  まずは貨幣制度の歴史を勉強し、貨幣の誕生から現在における貨幣の重要性と貨幣制度までを学びます。株や為替など普段、扱わないようなことも学習して、
                   世界のお金の流れを視覚化することを目指します。経済の回し方を知り、お金を上手に扱えるようになりましょう。</p>
               </div>
             </div>
@@ -95,7 +96,8 @@
               <div class="intro-section__txt-area">
                 <h2>e-ビジネス</h2>
                 <p>e-ビジネスという言葉を聞いたことがあるでしょうか。e-ビジネスとは"企業などの事業活動全般に渡ってインターネットや関連する情報・通信技術を導入し、
-                  業務工程を全面的に電子化すること、また、そのような変革を経て生まれた深く電子化された企業活動や商取引"のことです(e-Wordsより)。
+                  業務工程を全面的に電子化すること、また、そのような変革を経て生まれた深く電子化された企業活動や商取引"のことです
+                  (<a href="http://e-words.jp/w/eビジネス.html" target="_blank">e-Wordsより</a>)。
                   e-ビジネスの重要性やe-ビジネスの成り立ちから学び、最終的には簡単なe-ビジネスの仕組みを構築します。</p>
               </div>
             </div>
