--- a/japanese/index-ja.html
+++ b/japanese/index-ja.html
@@ -37,16 +37,17 @@
     </header>
     <!--メイン-->
     <main class="page-main">
-        <div class="page-main__header">
-            <h1 class="page-main__header1">Welcome to</h1>
-            <h1 class="page-main__header2">London Management School</h1>
+        <div class="main-header__inner">
+            <div class="page-main__header">
+                <h1 class="page-main__header1">Welcome to</h1>
+                <h1 class="page-main__header2">London Management School</h1>
+            </div>
         </div>
-        <div class="inner">
+        <div class="main-content__inner">
             <div class="page-main__content">
                 <section class="content-news content">
                     <h2 class="content-news__header">NEWS</h2>
                     <div class="news">
-                        <div></div>
                         <div>
                             <p>2020年03月11日</p>
                             <p>入試　コロナウイルスにおける本校入試について</p>
@@ -92,7 +93,6 @@
                 <section class="content-contents content">
                     <h2 class="content-contents__header">CONTENTS</h2>
                     <div class="ccc">
-                        <div></div>
                         <div>
                             <h3>本校についてはこちらから</h3>
                             <p>本校の概要、クラブ活動、年間行事等についてご紹介します</p>
