アクセスの仏訳

--- a/french/access-fr.html
+++ b/french/access-fr.html
@@ -38,7 +38,7 @@
     <main class="page-main">
       <h1>Comment accéder</h1>
       <div class="access">
-        <h2>Pour les personnes venant en transport</h2>
+        <h2>Fou des personnes venant en transport</h2>
         <p>Situé à Acton, West London Ealing London.
             Situé à environ 45 minutes du centre de Londres. Le quartier est très sécurisé et de nombreux étrangers y vivent.</p>
         <table border="1">
@@ -71,8 +71,9 @@
       </div>
       <div class="map">
         <h2>Emplacement de l'école</h2>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.9698255305616!2d-0.2827718842297865!3d51.51376957963617!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f25!3m3!1m2!1s0x48760e001303304f%3A0xb1ae25fda0c30ea9!2sThe%20Japanese%20School%20Ltd!5e0!3m2!1sfr!2suk!4v1584103311961!5m2!1sfr!2suk"
-          width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.9698255305616!2d-0.2827718842297865!3d51.51376957963617!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f25!3m3!1m2!1s0x48760e001303304f%3A0xb1ae25fda0c30ea9!2sThe%20Japanese%20School%20Ltd!5e0!3m2!1sfr!2suk!4v1584103311961!5m2!1sfr!2suk"
+         width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      </div>
     </main>
     <!--フッター-->
     <footer class="page-footer"></footer>
