授業内容の仏訳

--- a/french/content-fr.html
+++ b/french/content-fr.html
@@ -35,7 +35,82 @@
         </nav>
     </header>
     <!--メイン-->
-    <main class="page-main"></main>
+    <main class="page-main">
+      <div class="page-main">
+        <div class="page-main__header">
+          <h1 class="page-submain__header">Contenu pédagogique</h1>
+        </div>
+        <div class="page-main__content">
+          <p>Notre école se concentre également sur l'éducation. Certaines des leçons sont énumérées ci-dessous.</p>
+            <div class="intro-section__content">
+              <div class="intro-section__block" id="content1">
+                <div class="intro-section__img-area"></div>
+                <div class="intro-section__txt-area">
+                  <h2>Arts libéraux</h2>
+                  <p>Vous étudiez des matières d'arts libéraux à tous les niveaux. Les enseignants se concentrent particulièrement sur la première année, car c'est la base
+                     pour les classes de deuxième et troisième année. Les cours d'anglais se concentrent sur la communication, et impliquent parfois l'apprentissage hors campus.
+                     Notre objectif est d'atteindre un score TOEIC de 900 ou plus. Dans les cours de mathématiques, les élèves sont invités à expliquer leurs devoirs
+                     et apprendre aux autres à améliorer leur compréhension.</p>
+                </div>
+              </div>
+              <div class="intro-section__block" id="content2">
+                <div class="intro-section__img-area"></div>
+                <div class="intro-section__txt-area">
+                  <h2>Loi</h2>
+                  <p>Vous apprenez aussi la loi. Tout dans le monde est régi par la loi, donc c'est dans un monde avec la loi. En tous cas,
+                     c'est énorme et difficile à retenir, et nous proposons les méthodes d'apprentissage suivantes. Vous répondez à un quiz au
+                     début de chaque cours et à nouveau la semaine prochaine avec la même gamme de quiz.
+                     En utilisant non seulement les entrées mais aussi les sorties de nombreuses fois, vous aurez une bonne compréhension de la loi.</p>
+                </div>
+              </div>
+              <div class="intro-section__block" id="content3">
+                <div class="intro-section__img-area"></div>
+                <div class="intro-section__txt-area">
+                  <h2>Commercialisation</h2>
+                  <p>Vous apprenez le marketing, la base de la gestion. Le marketing est "une activité qui recherche les produits et
+                     services que veulent les consommateurs, et faciliter la distribution des producteurs aux consommateurs en déterminant les produits à fournir et
+                     la méthode des activités de vente (à partir de ce site: <a href="https://www.weblio.jp/content/マーケティング" target="_blank"> sur le marketing </a>).
+                     La chose la plus importante en marketing est de bien comprendre le marché. Vous pouvez avoir du mal à étudier,
+                     mais nos professeurs expliqueront avec confiance.</p>
+                </div>
+              </div>
+              <div class="intro-section__block" id="content4">
+                <div class="intro-section__img-area"></div>
+                <div class="intro-section__txt-area">
+                  <h2>La finance</h2>
+                  <p>Après tout, vous devez apprendre les finances. Il n'est pas exagéré de dire que l'argent est ce qui fait le monde.
+                     Tout d'abord, vous apprendrez de l'histoire du système monétaire et de l'importance de la monnaie et du système monétaire actuel.
+                     Vous apprenez également des choses que vous ne gérez pas habituellement, comme les actions et les échanges,
+                     et visent à visualiser le flux d'argent dans le monde. Apprenons à transformer l'économie et à bien gérer l'argent.</p>
+                </div>
+              </div>
+              <div class="intro-section__block" id="content5">
+                <div class="intro-section__img-area"></div>
+                <div class="intro-section__txt-area">
+                  <h2>Programmation</h2>
+                  <p>Dans la société de l'information d'aujourd'hui, c'est une leçon très importante, car on dit que "la capacité de programmation est la capacité d'une personne".
+                     Même dans une perspective globale, les cours de programmation ont commencé à être adoptés. Vous commencez avec un fonctionnement informatique de base, et cela devient
+                     un peu plus difficile, mais soyez assuré que nos professeurs professionnels seront attentifs à vos besoins.
+                     Finalement, vous créerez votre propre page d'accueil.</p>
+                </div>
+              </div>
+              <div class="intro-section__block" id="content6">
+                <div class="intro-section__img-area"></div>
+                <div class="intro-section__txt-area">
+                  <h2>affaires électroniques</h2>
+                  <p>Avez-vous déjà entendu le mot e-business? Les affaires électroniques consistent à «numériser complètement les processus d’affaires en introduisant
+                     Internet et les technologies de l'information et de la communication connexes dans toutes les activités commerciales des entreprises.
+                     Et ce sont les activités commerciales et commerciales, passer un tel changement et profondément numérisées. "
+                     (à partir de ce site: <a href="http://e-words.jp/w/eビジネス.html" target="_blank"> sur le commerce électronique </a>).
+                     Vous apprenez de l'importance de l'e-business et de l'origine de l'e-business, et finalement créez un mécanisme e-business simple.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+            <div class="gairyaku">
+              <img src="../img/content/figure_fr.jpg" alt="図" class="zu">
+            </div>
+    </main>
     <!--フッター-->
     <footer class="page-footer"></footer>
 </body>
