入試の仏訳

--- a/french/entranceExamination-fr.html
+++ b/french/entranceExamination-fr.html
@@ -35,7 +35,48 @@
         </nav>
     </header>
     <!--メイン-->
-    <main class="page-main"></main>
+    <main class="page-main">
+      <h1>Examen d'entrée</h1>
+      <table border="1">
+          <tr>
+              <th>Comment faire une demande</th>
+              <td>application Web</td>
+          </tr>
+          <tr>
+              <th>Date d'application</th>
+              <td>Samedi 7 mars</td>
+          </tr>
+          <tr>
+              <th>Date d'examen</th>
+              <td>Samedi 21 mars</td>
+          </tr>
+          <tr>
+              <th>Contenu de la sélection</th>
+              <td>Première sélection: Projection de documents<br>
+                  Deuxième sélection: Projection académique (200 points (anglais: 100 points, mathématiques: 100 points), les deux durent 60 minutes)<br>
+                  Sélection finale: Interview
+              </td>
+          </tr>
+          <tr>
+              <th>Annonce de décès</th>
+              <td>Samedi 4 avril</td>
+          </tr>
+          <tr>
+              <th>Date limite de la procédure d'admission</th>
+              <td>Samedi 11 avril</td>
+          </tr>
+          <tr>
+              <th>Qualification d'application</th>
+              <td>Le score TOEIC est supérieur à 600 ou le score TOEFL est supérieur à 50<br>
+                  La note d'anglais et de mathématiques est B ou plus<br>
+                  Attendance at the school briefing session on the WebParticipation à la séance d'information de l'école sur le Web
+          </tr>
+          <tr>
+              <th>Capacité de recrutement</th>
+              <td>100 personnes</td>
+          </tr>
+      </table>
+    </main>
     <!--フッター-->
     <footer class="page-footer"></footer>
 </body>
