--- a/english/intro-en.html
+++ b/english/intro-en.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/style-ja.css">
+    <link rel="stylesheet" href="../css/index-ja.css">
     <title>Introduction</title>
 </head>
 
