--- a/japanese/content-ja.html
+++ b/japanese/content-ja.html
@@ -36,8 +36,8 @@
     </nav>
   </header>
   <!--メイン-->
-  <main class="inner">
-    <div class="page-main">
+  <main class="page-main">
+    <div class="main-inner">
       <div class="page-main__header">
         <h1 class="page-submain__header">教育内容</h1>
       </div>
@@ -106,6 +106,9 @@
           <div class="gairyaku">
             <img src="../img/content/figure.jpg" alt="図" class="zu">
           </div>
+        </div>
+      </div>
+    </div>
   </main>
 
   <!--フッター-->
