--- a/english/content-en.html
+++ b/english/content-en.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/style-ja.css">
+    <link rel="stylesheet" href="../css/content-ja.css">
     <title>Education content</title>
 </head>
 
@@ -35,8 +36,9 @@
         </nav>
     </header>
     <!--メイン-->
+    
     <main class="page-main">
-      <div class="page-main">
+      <div class="main-inner">
         <div class="page-main__header">
           <h1 class="page-submain__header">Education content</h1>
         </div>
